--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <main>
     <section id="bio">
-      <img src="images/me.jpg" alt="Masrur" class="profile-pic" />
+      <img src="images/me.jpeg" alt="Masrur" class="profile-pic" />
       <p>
         I am a systems engineer with a background in applied physics, passionate about space systems, optics, and solving complex interdisciplinary problems. My experience spans aerospace R&D, quantum optics, and embedded systems development. I believe in precision, clarity, and pushing boundaries in engineering.
       </p>
