--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="bio">
       <img src="images/me.jpeg" alt="Masrur" class="profile-pic" />
       <p>
-        I am a systems engineer with a background in applied physics, passionate about space systems, optics, and solving complex interdisciplinary problems. My experience spans aerospace R&D, quantum optics, and embedded systems development. I believe in precision, clarity, and pushing boundaries in engineering.
+        I aam a systems engineer with a background in applied physics, passionate about space systems, optics, and solving complex interdisciplinary problems. My experience spans aerospace R&D, quantum optics, and embedded systems development. I believe in precision, clarity, and pushing boundaries in engineering.
       </p>
     </section>
 
