--- a/index.html
+++ b/index.html
@@ -6,47 +6,44 @@
   <title>Masrur Chowdhury</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
+
   <header>
     <h1>Masrur Chowdhury</h1>
     <p>Systems Engineer · Physicist · Researcher</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#resume">Resume</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <main>
-    <section id="bio">
-      <img src="images/me.jpeg" alt="Masrur" class="profile-pic" />
-      <p>
-        I am a systems engineer with a background in applied physics, passionate about space systems, optics, and solving complex interdisciplinary problems. My experience spans aerospace R&D, quantum optics, and embedded systems development. I believe in precision, clarity, and pushing boundaries in engineering.
-      </p>
-    </section>
+  <section id="about">
+    <h2>About</h2>
+    <p>I am a systems engineer with a background in applied physics, passionate about space systems, optics, and solving interdisciplinary problems...</p>
+  </section>
 
-    <section id="projects">
-      <h2>Selected Work</h2>
+  <section id="projects">
+    <h2>Selected Work</h2>
+    <ul>
+      <li><strong>NASA Dragonfly Mission</strong> — Supported lens systems integration using SolidWorks and ZEMAX.</li>
+      <li><strong>Optical Encoder Design</strong> — Built compact encoder using IR sensors and microcontrollers.</li>
+      <li><strong>Cold Atom Laser System</strong> — Built experimental setup with fiber optics and laser cooling.</li>
+    </ul>
+  </section>
 
-      <div class="project">
-        <h3>NASA Dragonfly Mission (Collins Aerospace)</h3>
-        <p>Contributed to the development of optoelectronic systems for NASA’s Dragonfly mission, including fixture design in SolidWorks and ZEMAX for lens systems, supporting environmental testing and system integration.</p>
-      </div>
+  <section id="resume">
+    <h2>Resume</h2>
+    <p><a href="Masrur_Chowdhury_Final_Resume.pdf" target="_blank">Download my resume</a></p>
+  </section>
 
-      <div class="project">
-        <h3>Optical Encoder Design</h3>
-        <p>Designed and built a compact optical encoder integrating infrared sensors, QAM, and microcontroller logic to support RTV bond inspection within precision optics systems.</p>
-      </div>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:masrur@example.com">masrur@example.com</a></p>
+  </section>
 
-      <div class="project">
-        <h3>Cold Atom Laser System (Goodsell Lab)</h3>
-        <p>Developed an experimental setup to laser-cool rubidium atoms and implemented fiber optics control for quantum behavior observations. Funded by a $5000 SRPS research grant.</p>
-      </div>
-
-      <div class="project">
-        <h3>Spectral Energy Distributions of Quasars (Glikman Lab)</h3>
-        <p>Analyzed spectral data from 147 quasars using Python, GALEX, and Hubble archives. Created SED graphs and contributed to a publication on red quasar classifications and star formation.</p>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 Masrur Chowdhury · <a href="mailto:masrurcy@gmail.com">masrurcy@gmail.com</a> · <a href="https://www.linkedin.com/in/masrur-chowdhury-232551192" target="_blank">LinkedIn</a></p>
-  </footer>
 </body>
 </html>
+
