--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       </p>
     </section>
 
+    <section id="resume">
+    <h2>Resume</h2>
+        <p><a href="Masrur_Chowdhury_Final_Resume.pdf" target="_blank">Download my resume</a></p>
+  </section>
+
     <section id="projects">
       <h2>Selected Work</h2>
 
