--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       </div>
 
       <div class="project">
-        <h3>Cold Atom Laser System (Goodsell Lab)</h3>
+        <h3>Cold Atom Laser System (Goodsell Lab at Middlebury College)</h3>
         <p>Developed an experimental setup to laser-cool rubidium atoms and implemented fiber optics control for quantum behavior observations. Funded by a $5000 SRPS research grant.</p>
       </div>
 
       <div class="project">
-        <h3>Spectral Energy Distributions of Quasars (Glikman Lab)</h3>
+        <h3>Spectral Energy Distributions of Quasars (Glikman Lab at Middlebury College)</h3>
         <p>Analyzed spectral data from 147 quasars using Python, GALEX, and Hubble archives. Created SED graphs and contributed to a publication on red quasar classifications and star formation.</p>
       </div>
     </section>
