--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <p>Systems Engineer · Physicist · Researcher</p>
   </header>
 
+  <nav>
+  <a href="index.html">Home</a> |
+  <a href="work.html">Work</a> |
+  <a href="photos.html">Photos</a>
+  </nav>
+
+
   <main>
     <section id="bio">
       <img src="images/me.jpeg" alt="Masrur" class="profile-pic" />
