--- a/photos.html
+++ b/photos.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Film Photography - Masrur Chowdhury</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <h1>My Film Photos</h1>
-  <img src="images/your_film_photo.jpg" alt="Film photo" style="width: 300px;">
-  <a href="index.html">← Back to Home</a>
+  <header>
+    <h1>My Film Photos</h1>
+    <nav>
+      <a href="index.html">← Back to Home</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="bio">
+      <p>
+        Hi, here are my pictures I have curated over the past few years. The first section includes shots from my solo trip to Japan in the summer of 2024, taken in Nagoya, Tokyo, Kyoto, Nara, Kobe, and the beautiful places in between.
+      </p>
+    </section>
+
+    <section id="japan-photos">
+      <img src="images/japan1.jpg" alt="Japan Photo 1" style="width: 300px;">
+      <img src="images/japan2.jpg" alt="Japan Photo 2" style="width: 300px;">
+      <!-- Add more images here -->
+    </section>
+  </main>
 </body>
 </html>
