--- a/photos.html
+++ b/photos.html
@@ -20,8 +20,10 @@
         Hi, here are my pictures I have curated over the past few years. The first section includes shots from my solo trip to Japan in the summer of 2024, taken in Nagoya, Tokyo, Kyoto, Nara, Kobe, and the beautiful places in between.
       </p>
     </section>
+    
 
     <section id="japan-photos">
+    <h2>Japan</h2>
       <img src="images/japan1.jpg" alt="Japan Photo 1" style="width: 300px;">
       <img src="images/japan2.jpg" alt="Japan Photo 2" style="width: 300px;">
       <!-- Add more images here -->
