--- a/photos.html
+++ b/photos.html
@@ -19,6 +19,9 @@
       <p>
         Hi, here are my pictures I have curated over the past few years. The first section includes shots from my solo trip to Japan in the summer of 2024, taken in Nagoya, Tokyo, Kyoto, Nara, Kobe, and the beautiful places in between.
       </p>
+       <p>
+        The second section includes my shots of Bangladesh in the Spring of 2025. I took shots in the city of Dhaka, but also the farmlands and forests of Sylhet. The journey consisted of learning how to ride a motorcycle, getting the hang of it, with a cup of tea in my hand and being inspired by the greens and riches of sweet Bangladesh. 
+      </p>
     </section>
     
 
@@ -26,7 +29,9 @@
     <h2>Japan</h2>
       <img src="images/japan1.jpg" alt="Japan Photo 1" style="width: 300px;">
       <img src="images/japan2.jpg" alt="Japan Photo 2" style="width: 300px;">
-      <!-- Add more images here -->
+      <img src="images/japan3.jpg" alt="Japan Photo 3" style="width: 300px;">
+      <img src="images/japan4.jpg" alt="Japan Photo 4" style="width: 300px;">
+      <img src="images/japan5.jpg" alt="Japan Photo 5" style="width: 300px;">
     </section>
   </main>
 </body>
