--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p>Systems Engineer · Physicist · Researcher</p>
   </header>
 
-  <nav>
-  <a href="index.html">Home</a> |
-  <a href="work.html">Work</a> |
+<nav class="navbar">
+  <a href="index.html">Home</a>
+  <a href="#work">Work</a>
   <a href="photos.html">Photos</a>
-  </nav>
+</nav>
 
 
   <main>
