--- a/photos.html
+++ b/photos.html
@@ -5,7 +5,6 @@
   <title>Film Photography - Masrur Chowdhury</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<h2>Japan</h2>
 <body>
   <header>
     <h1>My Film Photos</h1>
@@ -16,23 +15,31 @@
 
   <main>
     <section id="bio">
+      <h2>Japan</h2>
       <p>
         Hi, here are my pictures I have curated over the past few years. The first section includes shots from my solo trip to Japan in the summer of 2024, taken in Nagoya, Tokyo, Kyoto, Nara, Kobe, and the beautiful places in between.
       </p>
-       <p>
-        The second section includes my shots of Bangladesh in the Spring of 2025. I took shots in the city of Dhaka, but also the farmlands and forests of Sylhet. The journey consisted of learning how to ride a motorcycle, getting the hang of it, with a cup of tea in my hand and being inspired by the greens and riches of sweet Bangladesh. 
-      </p>
     </section>
-    
 
     <section id="japan-photos">
-    <h2>Japan</h2>
       <img src="images/japan1.jpg" alt="Japan Photo 1" style="width: 300px;">
       <img src="images/japan2.jpg" alt="Japan Photo 2" style="width: 300px;">
       <img src="images/japan3.jpg" alt="Japan Photo 3" style="width: 500px;">
       <img src="images/japan4.jpg" alt="Japan Photo 4" style="width: 500px;">
       <img src="images/japan5.jpg" alt="Japan Photo 5" style="width: 500px;">
     </section>
+
+    <section id="bangladesh-photos">
+      <h2>Bangladesh</h2>
+      <p>
+        The second section includes my shots of Bangladesh in the Spring of 2025. I took shots in the city of Dhaka, but also the farmlands and forests of Sylhet. The journey consisted of learning how to ride a motorcycle, getting the hang of it with a cup of tea in my hand, and being inspired by the greens and riches of sweet Bangladesh.
+      </p>
+    </section>
   </main>
+
+  <footer>
+    <p>&copy; 2025 Masrur Chowdhury</p>
+  </footer>
 </body>
 </html>
+
