--- a/photos.html
+++ b/photos.html
@@ -34,8 +34,20 @@
       <p>
         The second section includes my shots of Bangladesh in the Spring of 2025. I took shots in the city of Dhaka, but also the farmlands and forests of Sylhet. The journey consisted of learning how to ride a motorcycle, getting the hang of it with a cup of tea in my hand, and being inspired by the greens and riches of sweet Bangladesh.
       </p>
-    </section>
+
+  </section>
+
+  <section id="bangladesh-images">
+    <img src="images/bangladesh1.jpg" alt="Bangladesh Photo 1" style="width: 300px;">
+    <img src="images/bangladesh2.jpg" alt="Bangladesh Photo 2" style="width: 300px;">
+    <img src="images/bangladesh3.jpg" alt="Bangladesh Photo 3" style="width: 300px;">
+    <img src="images/bangladesh4.jpg" alt="Bangladesh Photo 4" style="width: 300px;">
+    <img src="images/bangladesh5.jpg" alt="Bangladesh Photo 5" style="width: 300px;">
+    <img src="images/bangladesh6.jpg" alt="Bangladesh Photo 6" style="width: 300px;">
+  </section>
   </main>
+
+
 
   <footer>
     <p>&copy; 2025 Masrur Chowdhury</p>
