--- a/photos.html
+++ b/photos.html
@@ -22,11 +22,11 @@
     </section>
 
     <section id="japan-photos">
-      <img src="images/japan1.jpeg" alt="Japan Photo 1" style="width: 300px;">
-      <img src="images/japan2.jpeg" alt="Japan Photo 2" style="width: 300px;">
-      <img src="images/japan3.jpeg" alt="Japan Photo 3" style="width: 500px;">
-      <img src="images/japan4.jpeg" alt="Japan Photo 4" style="width: 500px;">
-      <img src="images/japan5.jpeg" alt="Japan Photo 5" style="width: 500px;">
+      <img src="images/japan1.jpg" alt="Japan Photo 1" style="width: 300px;">
+      <img src="images/japan2.jpg" alt="Japan Photo 2" style="width: 300px;">
+      <img src="images/japan3.jpg" alt="Japan Photo 3" style="width: 500px;">
+      <img src="images/japan4.jpg" alt="Japan Photo 4" style="width: 500px;">
+      <img src="images/japan5.jpg" alt="Japan Photo 5" style="width: 500px;">
     </section>
 
     <section id="bangladesh-photos">
@@ -38,12 +38,12 @@
   </section>
 
   <section id="bangladesh-images">
-    <img src="images/bangladesh1.jpg" alt="Bangladesh Photo 1" style="width: 300px;">
-    <img src="images/bangladesh2.jpg" alt="Bangladesh Photo 2" style="width: 300px;">
-    <img src="images/bangladesh3.jpg" alt="Bangladesh Photo 3" style="width: 300px;">
-    <img src="images/bangladesh4.jpg" alt="Bangladesh Photo 4" style="width: 300px;">
-    <img src="images/bangladesh5.jpg" alt="Bangladesh Photo 5" style="width: 300px;">
-    <img src="images/bangladesh6.jpg" alt="Bangladesh Photo 6" style="width: 300px;">
+    <img src="images/bangladesh1.jpeg" alt="Bangladesh Photo 1" style="width: 300px;">
+    <img src="images/bangladesh2.jpeg" alt="Bangladesh Photo 2" style="width: 300px;">
+    <img src="images/bangladesh3.jpeg" alt="Bangladesh Photo 3" style="width: 300px;">
+    <img src="images/bangladesh4.jpeg" alt="Bangladesh Photo 4" style="width: 300px;">
+    <img src="images/bangladesh5.jpeg" alt="Bangladesh Photo 5" style="width: 300px;">
+    <img src="images/bangladesh6.jpeg" alt="Bangladesh Photo 6" style="width: 300px;">
   </section>
   </main>
 
