--- a/photos.html
+++ b/photos.html
@@ -21,13 +21,13 @@
       </p>
     </section>
 
-    <section id="japan-photos">
-      <img src="images/japan1.jpg" alt="Japan Photo 1" style="width: 300px;">
-      <img src="images/japan2.jpg" alt="Japan Photo 2" style="width: 300px;">
-      <img src="images/japan3.jpg" alt="Japan Photo 3" style="width: 500px;">
-      <img src="images/japan4.jpg" alt="Japan Photo 4" style="width: 500px;">
-      <img src="images/japan5.jpg" alt="Japan Photo 5" style="width: 500px;">
-    </section>
+   <section id="japan-photos" class="photo-grid">
+  <img src="images/japan1.jpg" alt="Japan Photo 1">
+  <img src="images/japan2.jpg" alt="Japan Photo 2">
+  <img src="images/japan3.jpg" alt="Japan Photo 3">
+  <img src="images/japan4.jpg" alt="Japan Photo 4">
+  <img src="images/japan5.jpg" alt="Japan Photo 5">
+</section>
 
     <section id="bangladesh-photos">
       <h2>Bangladesh</h2>
@@ -37,14 +37,14 @@
 
   </section>
 
-  <section id="bangladesh-images">
-    <img src="images/bangladesh1.jpeg" alt="Bangladesh Photo 1" style="width: 300px;">
-    <img src="images/bangladesh2.jpeg" alt="Bangladesh Photo 2" style="width: 300px;">
-    <img src="images/bangladesh3.jpeg" alt="Bangladesh Photo 3" style="width: 300px;">
-    <img src="images/bangladesh4.jpeg" alt="Bangladesh Photo 4" style="width: 300px;">
-    <img src="images/bangladesh5.jpeg" alt="Bangladesh Photo 5" style="width: 500px;">
-    <img src="images/bangladesh6.jpeg" alt="Bangladesh Photo 6" style="width: 300px;">
-  </section>
+<section id="bangladesh-images" class="photo-grid">
+  <img src="images/bangladesh1.jpeg" alt="Bangladesh Photo 1" loading="lazy">
+  <img src="images/bangladesh2.jpeg" alt="Bangladesh Photo 2" loading="lazy">
+  <img src="images/bangladesh3.jpeg" alt="Bangladesh Photo 3" loading="lazy">
+  <img src="images/bangladesh4.jpeg" alt="Bangladesh Photo 4" loading="lazy">
+  <img src="images/bangladesh5.jpeg" alt="Bangladesh Photo 5" loading="lazy">
+  <img src="images/bangladesh6.jpeg" alt="Bangladesh Photo 6" loading="lazy">
+</section>
   </main>
 
 
