--- a/index.html
+++ b/index.html
@@ -33,29 +33,43 @@
         <p><a href="Masrur_Chowdhury_Final_Resume_LinkedIn.pdf" target="_blank">Download my resume</a></p>
   </section>
 
-    <section id="projects">
-      <h2>Selected Work</h2>
 
-      <div class="project">
-        <h3>NASA Dragonfly Mission (Collins Aerospace)</h3>
-        <p>Contributed to the development of optoelectronic systems for NASA’s Dragonfly mission, including fixture design in SolidWorks and ZEMAX for lens systems, supporting environmental testing and system integration.</p>
-      </div>
+<section id="work">
+  <h2>Selected Work</h2>
 
-      <div class="project">
-        <h3>Optical Encoder Design</h3>
-        <p>Designed and built a compact optical encoder integrating infrared sensors, QAM, and microcontroller logic to support RTV bond inspection within precision optics systems.</p>
-      </div>
+  <h3>NASA Dragonfly Mission (Collins Aerospace)</h3>
+  <p>
+    Used SolidWorks and ZEMAX to design tooling and alignment fixtures for optoelectronic assemblies in support of NASA’s Dragonfly mission. Enabled repeatable subsystem builds using adhesive bonding and tight-tolerance alignment. Evaluated performance under thermal cycling and vibration testing, contributing to spaceflight environmental qualification.
+  </p>
 
-      <div class="project">
-        <h3>Cold Atom Laser System (Goodsell Lab at Middlebury College)</h3>
-        <p>Developed an experimental setup to laser-cool rubidium atoms and implemented fiber optics control for quantum behavior observations. Funded by a $5000 SRPS research grant.</p>
-      </div>
+  <h3>Optical Encoder Design</h3>
+  <p>
+    Designed and built a compact optical encoder integrating IR sensors, QAM signal processing, and microcontroller logic to support RTV bond inspection in precision optics systems. Increased detection speed 4× and reduced reliance on commercial solutions.
+  </p>
 
-      <div class="project">
-        <h3>Spectral Energy Distributions of Quasars (Glikman Lab at Middlebury College)</h3>
-        <p>Analyzed spectral data from 147 quasars using Python, GALEX, and Hubble archives. Created SED graphs and contributed to a publication on red quasar classifications and star formation.</p>
-      </div>
-    </section>
+  <h3>Embedded Systems Validation</h3>
+  <p>
+    Developed a remote test platform using microcontrollers and power analyzers to validate sensing hardware for next-gen aircraft fuel gauging. Led test protocol development across electrical and mechanical failure modes.
+  </p>
+
+  <h3>Liquid Hydrogen Sensor Testing</h3>
+  <p>
+    Managed cryogenic test workflows for 100+ hydrogen sensors. Created structured datasets to track mechanical failure patterns and improve sensor calibration across extreme conditions.
+  </p>
+
+  <h3>Cold Atom Laser System (Goodsell Lab, Middlebury College)</h3>
+  <p>
+    Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under SRPS grant funding.
+  </p>
+
+  <h3>Quasar Classification Research (Glikman Lab)</h3>
+  <p>
+    Analyzed data from 147 quasars using Hubble, GALEX, and WISE. Created SED models and data visualizations to support a publication on red quasar classifications and star formation history.
+  </p>
+
+  <h3><a href="photos.html">📸 View My Film Photography</a></h3>
+</section>
+
   </main>
 
   <footer>
