--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <p><a href="Masrur_Chowdhury_Final_Resume_LinkedIn.pdf" target="_blank">Download my resume</a></p>
   </section>
 
+<section id="Film Photography">
+    <h2>Film Photography</h2>
+    <h3><a href="photos.html">📸 View My Film Photography</a></h3>
+</section>
+
 
 <section id="work">
   <h2>Selected Work</h2>
@@ -67,7 +72,6 @@
     Analyzed data from 147 quasars using Hubble, GALEX, and WISE. Created SED models and data visualizations to support a publication on red quasar classifications and star formation history.
   </p>
 
-  <h3><a href="photos.html">📸 View My Film Photography</a></h3>
 </section>
 
   </main>
