--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="resume">
     <h2>Resume</h2>
-        <p><a href="Masrur_Chowdhury_Final_Resume_LinkedIn.pdf" target="_blank">Download my resume</a></p>
+        <h3><a href="Masrur_Chowdhury_Final_Resume_LinkedIn.pdf" target="_blank">Download my resume</a></h3>
   </section>
 
 <section id="Film Photography">
