--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <section id="work">
-  <h2>Selected Work</h2>
+  <h2>Selected Work (Work in Progress...) </h2>
 
   <h3>NASA Dragonfly Mission (Collins Aerospace)</h3>
   <p>
