--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="bio">
       <img src="images/me.jpeg" alt="Masrur" class="profile-pic" />
       <p>
-        I am a systems engineer with a background in applied physics, passionate about space systems, optics, and solving complex interdisciplinary problems. My experience spans aerospace R&D, quantum optics, and embedded systems development. I believe in precision, clarity, and pushing boundaries in engineering.
+            I am an engineer with a background in physics, systems engineering, and test engineering, passionate about space systems, optics, and solving complex interdisciplinary problems. My experience spans aerospace R&D, quantum optics, and embedded systems development. I value precision, clarity, and innovation in engineering, with a focus on pushing technological boundaries. I have two years of experience at Raytheon and over three additional years in laboratory research environments. Across all projects, my goal has been consistent: advancing innovation and driving humanity’s progress in science.
       </p>
     </section>
 
