--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 <section id="work">
   <h2>Selected Work (Click the headings to read more about the projects!) </h2>
 
-  <h3> <a href="projects/dragonfly.html"> NASA Dragonfly Mission (Collins Aerospace)</h3>
+  <h3> <a href="projects/dragonfly.html"> NASA Dragonfly Mission (Collins Aerospace)/a></h3>
+
+  <h3><a href="projects/dragonfly.html">NASA Dragonfly Mission</a></h3>
+
   <p>
     Used SolidWorks and ZEMAX to design tooling and alignment fixtures for optoelectronic assemblies in support of NASA’s Dragonfly mission. Enabled repeatable subsystem builds using adhesive bonding and tight-tolerance alignment. Evaluated performance under thermal cycling and vibration testing, contributing to spaceflight environmental qualification.
   </p>
