--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     Used SolidWorks and ZEMAX to design tooling and alignment fixtures for optoelectronic assemblies in support of NASA’s Dragonfly mission. Enabled repeatable subsystem builds using adhesive bonding and tight-tolerance alignment. Evaluated performance under thermal cycling and vibration testing, contributing to spaceflight environmental qualification.
   </p>
 
-  <h3>Optical Encoder Design</h3>
+  <h3><a href="projects/encoder.html">Optical Encoder Design</a></h3>
   <p>
     Designed and built a compact optical encoder integrating IR sensors, QAM signal processing, and microcontroller logic to support RTV bond inspection in precision optics systems. Increased detection speed 4× and reduced reliance on commercial solutions.
   </p>
