--- a/Projects/dragonfly.html
+++ b/Projects/dragonfly.html
@@ -17,6 +17,10 @@
     During my time at Collins Aerospace, I contributed to the development and environmental qualification of optoelectronic hardware destined for NASA’s Dragonfly mission — a rotorcraft lander set to explore Titan, Saturn’s largest moon. I was part of the engineering effort to ensure critical optical systems would survive and operate reliably in extreme spaceflight conditions.
   </p>
 
+
+
+  By NASA APL - <a rel="nofollow" class="external free" href="https://dragonfly.jhuapl.edu/Gallery/#Gallery">https://dragonfly.jhuapl.edu/Gallery/#Gallery</a>, Public Domain, <a href="https://commons.wikimedia.org/w/index.php?curid=108884710">Link</a>
+
   <h2>Thermal Cycling & Optical Stability Testing</h2>
   <p>
     One of my key responsibilities was validating the mechanical and optical stability of components under thermal stress. I developed and executed thermal cycling protocols using a hot/cold plate system that integrated a liquid nitrogen (LN2) line for rapid cooling. These tests simulated launch and deep-space temperature fluctuations.
@@ -32,7 +36,7 @@
 
   <h2>Tooling and Alignment</h2>
   <p>
-    I also supported the design of precision tooling and alignment fixtures using SolidWorks and ZEMAX. These fixtures enabled repeatable placement and bonding of optical subsystems, ensuring submillimeter alignment accuracy even after adhesive curing.
+    I also supported the design of precision tooling and alignment fixtures using SolidWorks and ZEMAX. These fixtures enabled repeatable placement and bonding of optical subsystems, ensuring submillimeter alignment accuracy even after adhesive curing. You can learn more about this under my QAM Encoder Section! 
   </p>
 
   <h2>Reflection</h2>
@@ -40,7 +44,11 @@
     This project helped solidify my understanding of optical-mechanical integration in real-world space hardware. It was also my first time working on hardware with a direct connection to a planetary mission, which deepened my appreciation for rigor, test design, and the importance of cross-disciplinary collaboration.
   </p>
 
-  <p><em>Images and diagrams coming soon.</em></p>
+<h2>Skills</h2>
+  <p>
+    This project helped solidify my understanding of optical-mechanical integration in real-world space hardware. It was also my first time working on hardware with a direct connection to a planetary mission, which deepened my appreciation for rigor, test design, and the importance of cross-disciplinary collaboration.
+  </p>
+
 </main>
 
 </body>
