--- a/Projects/dragonfly.html
+++ b/Projects/dragonfly.html
@@ -19,7 +19,13 @@
 
 
 
-  By NASA APL - <a rel="nofollow" class="external free" href="https://dragonfly.jhuapl.edu/Gallery/#Gallery">https://dragonfly.jhuapl.edu/Gallery/#Gallery</a>, Public Domain, <a href="https://commons.wikimedia.org/w/index.php?curid=108884710">Link</a>
+<figure>
+  <img src="../images/Dragonfly_spacecraft.jpg" alt="NASA Dragonfly Mission render" style="width: 100%; max-width: 600px; border-radius: 8px; margin: 20px 0;">
+  <figcaption style="font-size: 0.85em; color: gray;">
+    Image courtesy of <a href="https://dragonfly.jhuapl.edu/Gallery/#Gallery" target="_blank" rel="noopener noreferrer">NASA APL</a>, public domain. 
+    <a href="https://commons.wikimedia.org/w/index.php?curid=108884710" target="_blank" rel="noopener noreferrer">Source</a>
+  </figcaption>
+</figure>
 
   <h2>Thermal Cycling & Optical Stability Testing</h2>
   <p>
