--- a/Projects/dragonfly.html
+++ b/Projects/dragonfly.html
@@ -54,10 +54,24 @@
     This project helped solidify my understanding of optical-mechanical integration in real-world space hardware. It was also my first time working on hardware with a direct connection to a planetary mission, which deepened my appreciation for rigor, test design, and the importance of cross-disciplinary collaboration.
   </p>
 
-<h2>Skills</h2>
-  <p>
-    This project helped solidify my understanding of optical-mechanical integration in real-world space hardware. It was also my first time working on hardware with a direct connection to a planetary mission, which deepened my appreciation for rigor, test design, and the importance of cross-disciplinary collaboration.
-  </p>
+<h2>Skills Gained</h2>
+<p>
+  This project helped solidify my understanding of optical-mechanical integration in real-world space hardware. It was also my first time working on hardware with a direct connection to a planetary mission, which deepened my appreciation for rigor, test design, and the importance of cross-disciplinary collaboration.
+</p>
+
+<ul>
+  <li>Opto-mechanical system design and evaluation</li>
+  <li>Thermal cycling using LN₂-cooled hot/cold plate setup</li>
+  <li>Handling and safety training for liquid nitrogen (LN₂)</li>
+  <li>Vacuum purging and environmental qualification techniques</li>
+  <li>Interpreting optical interference fringes (e.g., Newton’s rings)</li>
+  <li>Precision tooling and fixture design using SolidWorks</li>
+  <li>ZEMAX-based optical alignment modeling</li>
+  <li>Thermocouple sensor integration and monitoring</li>
+  <li>Adhesive bonding under tight mechanical tolerances</li>
+  <li>Cross-functional collaboration with optical, mechanical, and test engineers</li>
+</ul>
+
 
 </main>
 
