--- a/Projects/dragonfly.html
+++ b/Projects/dragonfly.html
@@ -21,7 +21,7 @@
 
 <figure style="text-align: center;">
   <img src="../images/Dragonfly_spacecraft.jpg" 
-       alt="NASA Dragonfly Mission render" 
+       alt="NASA Dragonfly spacecraft concept render showing rotorcraft design for Titan mission" 
        style="width: 100%; max-width: 600px; border-radius: 8px; margin: 20px auto; display: block;">
   
   <figcaption style="font-size: 0.85em; color: gray;">
