--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <section id="work">
-  <h2>Selected Work (Click the headings to learn more about my projects!) </h2>
+  <h2>Selected Work (Click the headings to learn more about the projects!) </h2>
 
 
   <h3><a href="Projects/dragonfly.html">NASA Dragonfly Mission</a></h3>
