--- a/index.html
+++ b/index.html
@@ -46,33 +46,36 @@
   <h2>Selected Work (Click the headings to learn more about the projects!) </h2>
 
 
-  <h3><a href="Projects/dragonfly.html">NASA Dragonfly Mission</a></h3>
+  <h3><a href="Projects/dragonfly.html">NASA Dragonfly Mission(Testing/Validation)</a></h3>
 
   <p>
     Used SolidWorks and ZEMAX to design tooling and alignment fixtures for optoelectronic assemblies in support of NASA’s Dragonfly mission. Enabled repeatable subsystem builds using adhesive bonding and tight-tolerance alignment. Evaluated performance under thermal cycling and vibration testing, contributing to spaceflight environmental qualification.
   </p>
 
-  <h3><a href="Projects/encoder.html">Optical Encoder Design</a></h3>
+  <h3><a href="Projects/encoder.html">Optical Encoder Design (Testing/ Manufacturing)</a></h3>
   <p>
     Designed and built a compact optical encoder integrating IR sensors, QAM signal processing, and microcontroller logic to support RTV bond inspection in precision optics systems. Increased detection speed 4× and reduced reliance on commercial solutions.
+  </p>
+
+  <h3>Cold Atom Laser System (Goodsell Lab, Middlebury College)(Testing/Design/Research)</h3>
+  <p>
+    Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under SRPS grant funding.
   </p>
 
   <h3>Embedded Systems Validation</h3>
   <p>
     Developed a remote test platform using microcontrollers and power analyzers to validate sensing hardware for next-gen aircraft fuel gauging. Led test protocol development across electrical and mechanical failure modes.
   </p>
+  <h3>Count-Min Sketch- Randomized Algorithms (Programming)</h3>
 
-  <h3>Liquid Hydrogen Sensor Testing</h3>
+
+  <h3>Liquid Hydrogen Sensor Testing (Testing)</h3>
   <p>
     Managed cryogenic test workflows for 100+ hydrogen sensors. Created structured datasets to track mechanical failure patterns and improve sensor calibration across extreme conditions.
   </p>
 
-  <h3>Cold Atom Laser System (Goodsell Lab, Middlebury College)</h3>
-  <p>
-    Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under SRPS grant funding.
-  </p>
 
-  <h3>Quasar Classification Research (Glikman Lab)</h3>
+  <h3>Quasar Classification Research (Glikman Lab) (Research)</h3>
   <p>
     Analyzed data from 147 quasars using Hubble, GALEX, and WISE. Created SED models and data visualizations to support a publication on red quasar classifications and star formation history.
   </p>
