--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
     Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under SRPS grant funding.
   </p>
 
+  <h3>Silicon Prier adhesion test (Push and Shear) (Testing/Research)</h3>
+
  
   <h3>Count-Min Sketch- Randomized Algorithms (Programming)</h3>
+
+
 
 
   <h3>Embedded Systems Validation</h3>
