--- a/Projects/encoder.html
+++ b/Projects/encoder.html
@@ -46,7 +46,7 @@
 
   <h2>Skills Gained</h2>
   <ul>
-    <li>IR reflective sensor integration (TCRT5000)</li>
+    <li>IR reflective sensor integration (Adafruit STEMMA Reflective Photo Interrupt Sensor - TCRT1000)</li>
     <li>Quadrature encoder design and alignment</li>
     <li>Breadboard prototyping and test fixture development</li>
     <li>Arduino microcontroller programming</li>
