--- a/Projects/encoder.html
+++ b/Projects/encoder.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>QAM Encoder for precision rotational tracking – Masrur Chowdhury</title>
+  <title>Quadrature Amplitude Modulation (QAM) Encoder for precision rotational tracking – Masrur Chowdhury</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
 
   <h2>Testing and Signal Processing</h2>
   <p>
-    I tested the encoder using a benchtop motion stage that incrementally rotated the reflective surface while monitoring sensor output on an oscilloscope and MATLAB plots. The processed signal was passed through a simple QAM-based decoder to resolve position data, which we validated against known step sizes.
+    I tested the encoder using a benchtop motion stage that incrementally rotated the reflective surface while monitoring sensor output on a serial monitor and MATLAB plots. The processed signal was passed through a simple QAM-based decoder to resolve position data, which we validated against known step sizes.
   </p>
 
   <p>
