--- a/Projects/encoder.html
+++ b/Projects/encoder.html
@@ -56,6 +56,6 @@
     <li>Integration with air bearing spindle and live camera inspection workflow</li>
   </ul>
 
-  <p><em>Images and circuit diagrams coming soon.</em></p>
+  <p><em>More Images and diagrams coming soon.</em></p>
   <p><a href="../index.html#work">← Back to Selected Work</a></p>
 </main>
