--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
 
 
 
-  <h3>Embedded Systems Validation</h3>
+  <h3>Embedded Systems Validation (Testing) (Coming soon)</h3>
   <p>
     Developed a remote test platform using microcontrollers and power analyzers to validate sensing hardware for next-gen aircraft fuel gauging. Led test protocol development across electrical and mechanical failure modes.
   </p>
 
 
-  <h3>Liquid Hydrogen Sensor Testing (Testing)</h3>
+  <h3>Liquid Hydrogen Sensor Testing (Testing) (Coming soon) </h3>
   <p>
     Managed cryogenic test workflows for 100+ hydrogen sensors. Created structured datasets to track mechanical failure patterns and improve sensor calibration across extreme conditions.
   </p>
 
 
-  <h3>Quasar Classification Research (Glikman Lab) (Research)</h3>
+  <h3>Quasar Classification Research (Glikman Lab) (Research) (Coming soon)</h3>
   <p>
     Analyzed data from 147 quasars using Hubble, GALEX, and WISE. Created SED models and data visualizations to support a publication on red quasar classifications and star formation history.
   </p>
