--- a/Projects/encoder.html
+++ b/Projects/encoder.html
@@ -27,11 +27,11 @@
   </p>
 
   <figure style="text-align: center;">
-    <img src="../images/encoder_schematic.png" 
-         alt="Simplified schematic of optical encoder system"
+    <img src="../images/sensors_5913_TCRT1000_Sensor.jpg" 
+         alt="IR Reflective sensor used"
          style="width: 100%; max-width: 650px; border-radius: 8px; margin: 20px auto; display: block;">
     <figcaption style="font-size: 0.85em; color: gray;">
-      Schematic representation of the optical encoder system. Includes quadrature sensor alignment and reflective tape interface.
+      Used two of these in quadrature sensing, an encoded tape to measure rotation. Image from Adafruit. 
     </figcaption>
   </figure>
 
