--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h2>Selected Work (Click the headings to learn more about the projects!) </h2>
 
 
-  <h3><a href="Projects/dragonfly.html">NASA Dragonfly Mission(Testing/Validation)</a></h3>
+  <h3><a href="Projects/dragonfly.html">NASA Dragonfly Mission: Thermal cycling and fatigue test of optical components (Testing/Validation)</a></h3>
 
   <p>
     Used SolidWorks and ZEMAX to design tooling and alignment fixtures for optoelectronic assemblies in support of NASA’s Dragonfly mission. Enabled repeatable subsystem builds using adhesive bonding and tight-tolerance alignment. Evaluated performance under thermal cycling and vibration testing, contributing to spaceflight environmental qualification.
@@ -57,7 +57,7 @@
     Designed and built a compact optical encoder integrating IR sensors, QAM signal processing, and microcontroller logic to support RTV bond inspection in precision optics systems. Increased detection speed 4× and reduced reliance on commercial solutions.
   </p>
 
-  <h3>Cold Atom Laser System (Goodsell Lab, Middlebury College)(Testing/Design/Research)</h3>
+  <h3>  <a href="Projects/coldatom.html"> Cold Atom Laser System (Goodsell Lab, Middlebury College)(Testing/Design/Research)</a></h3>
   <p>
     Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under SRPS grant funding.
   </p>
