--- a/Projects/coldatom.html
+++ b/Projects/coldatom.html
@@ -26,8 +26,8 @@
     <!-- Figure: high-level schematic / illustrative only -->
     <figure style="text-align:center;">
       <img
-        src="../images/cold_atom_overview.png"
-        alt="Illustrative schematic of a rubidium cold-atom setup with three laser beams, fiber routing, MOT region, magnetic coils, and detection path"
+        src="../images/Lasercolling_schem.pdf"
+        alt="Illustrative schematic of a rubidium cold-atom setup with three laser beams"
         style="width:100%; max-width:720px; display:block; margin:20px auto; border-radius:8px;"
       />
       <figcaption style="font-size:.85em; color:gray;">
