--- a/Projects/coldatom.html
+++ b/Projects/coldatom.html
@@ -25,7 +25,7 @@
     <!-- Figure: high-level schematic / illustrative only -->
     <figure style="text-align:center;">
       <img
-        src="../images/Lasercolling_schem.pdf"
+        src="../images/Lasercolling_schem.png"
         alt="Illustrative schematic of a rubidium cold-atom setup with three laser beams"
         style="width:100%; max-width:720px; display:block; margin:20px auto; border-radius:8px;"
       />
