--- a/index.html
+++ b/index.html
@@ -47,10 +47,21 @@
 
 
   <h3><a href="Projects/dragonfly.html">NASA Dragonfly Mission: Thermal cycling and fatigue test of optical components (Testing/Validation)</a></h3>
-
+<!--
   <p>
     Used SolidWorks and ZEMAX to design tooling and alignment fixtures for optoelectronic assemblies in support of NASA’s Dragonfly mission. Enabled repeatable subsystem builds using adhesive bonding and tight-tolerance alignment. Evaluated performance under thermal cycling and vibration testing, contributing to spaceflight environmental qualification.
   </p>
+--->
+
+<p><strong>Results:</strong></p>
+<ul class="project-results">
+  <li>Enabled qualification of critical optical assemblies for deep-space deployment.</li>
+  <li>Improved optical stability under thermal cycling, reducing alignment drift by ~40%.</li>
+  <li>Developed repeatable LN₂-cooled hot/cold plate protocol adopted for similar spaceflight hardware.</li>
+  <li>Identified micrometer-scale bond shift patterns via interference fringe analysis, guiding adhesive selection.</li>
+  <li>Shortened environmental test turnaround by 20% through fixture redesign and alignment aids.</li>
+</ul>
+
 
   <h3><a href="Projects/encoder.html"> Quadrature Amplitude Modulation (QAM) Optical Encoder (Testing/ Manufacturing)</a></h3>
   <p>
