--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <li>Developed repeatable LN₂-cooled hot/cold plate protocol adopted for similar spaceflight hardware.</li>
   <li>Identified micrometer-scale bond shift patterns via interference fringe analysis, guiding adhesive selection.</li>
   <li>Shortened environmental test turnaround by 20% through fixture redesign and alignment aids.</li>
+  <li>Implemented a direct thermocouple + DMM measurement method to monitor in-chamber optical assembly temperature, eliminating delays from waiting for full chamber cooldown.</li>
 </ul>
 
 
